--- a/Assignment/day26/day26/day26.vcxproj.filters
+++ b/Assignment/day26/day26/day26.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="prog03.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog04.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
