--- a/classwork/day28/day28/day28.vcxproj.filters
+++ b/classwork/day28/day28/day28.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="prog01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog02.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
