--- a/classwork/day28/day28/day28.vcxproj.filters
+++ b/classwork/day28/day28/day28.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="prog02.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog03.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
