--- a/classwork/day28/day28/day28.vcxproj
+++ b/classwork/day28/day28/day28.vcxproj
@@ -133,7 +133,9 @@
     <ClCompile Include="prog02.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
     </ClCompile>
-    <ClCompile Include="prog03.cpp" />
+    <ClCompile Include="prog03.cpp">
+      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">false</ExcludedFromBuild>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
