--- a/classwork/day38/day38/day38.vcxproj.filters
+++ b/classwork/day38/day38/day38.vcxproj.filters
@@ -30,6 +30,9 @@
     <ClCompile Include="prog04.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog05.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="employee.h">
