--- a/Assignment/day38/day38/day38.vcxproj.filters
+++ b/Assignment/day38/day38/day38.vcxproj.filters
@@ -18,5 +18,17 @@
     <ClCompile Include="prog01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog02.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prog03.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prog04.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prog05.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
