--- a/classwork/day45/day45/day45.vcxproj.filters
+++ b/classwork/day45/day45/day45.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="prog01.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="prog02.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="prog03.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
